Fix GIF background not displaying on iOS Safari
Replace background-attachment: fixed with a ::before pseudo-element
using position: fixed, which iOS Safari supports properly.

--- a/src/App.css
+++ b/src/App.css
@@ -14,9 +14,22 @@
 body {
     font-family: rais;
     font-size: 15px;
-    background: url(./img/background.gif) no-repeat center center fixed;
-    background-size: cover;
     background-color: black;
+    margin: 0;
+    padding: 0;
+}
+
+/* Fixed background that works on iOS */
+body::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url(./img/background.gif) no-repeat center center;
+    background-size: cover;
+    z-index: -1;
 }
 
 h1 {
